include(ValaPrecompile)

vala_precompile(LIBALMANNA_VALA_C 
	Column.vala
	Comparison.vala
	Config.vala
	Connection.vala
	ConnectionPool.vala
	DataBinder.vala
	Entity.vala
	Loader.vala
	Logger.vala
	Query.vala
	RelationshipInfo.vala
	Repo.vala
	Search.vala
	Server.vala
PACKAGES
	${DEFAULT_PACKAGES}
OPTIONS
	${DEFAULT_VALA_OPTIONS}
GENERATE_VAPI
	${PKGNAME}-${PKGVERSION}
GENERATE_HEADER
	${PKGNAME}-${PKGVERSION})

set(LIBALMANNA_CFLAGS
	${DEPS_CFLAGS}
	${DEPS_CFLAGS_OTHER}
	-w
)
set(LIBALMANNA_LIB_PATHS
	${DEPS_LIBRARY_DIRS}
)
link_directories(${LIBALMANNA_LIB_PATHS})
add_definitions(${LIBALMANNA_CFLAGS})

add_library(${PKGNAME}-${PKGVERSION} SHARED ${LIBALMANNA_VALA_C})
target_link_libraries(${PKGNAME}-${PKGVERSION} ${DEPS_LIBRARIES})
configure_file (${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}-${PKGVERSION}.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.pc)

install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.vapi ../../${PKGNAME}-${PKGVERSION}.deps DESTINATION ${CMAKE_INSTALL_PREFIX}/share/vala/vapi/)
install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/)
install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.pc DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/pkgconfig/)
install (TARGETS ${PKGNAME}-${PKGVERSION} DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/)
